Moved @import statement to the top so it works properly, changed h1 font size to 10 rem and padding-top to 3%. Fixed specificity on about.css so hidden h3 and p will be visible on photo hover.

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,3 +1,6 @@
+/* Base CSS Start */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Roboto+Slab:wght@300;500;700&family=Roboto:wght@300;500;700&display=swap');
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -134,8 +137,7 @@ table {
     border-spacing: 0;
 }
 
-/* Base CSS Start */
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Roboto+Slab:wght@300;500;700&family=Roboto:wght@300;500;700&display=swap');
+
 
 /* Fonts
 font-family: 'Dancing Script', cursive;
@@ -180,8 +182,8 @@ h6 {
 }
 
 h1 {
-    font-size: 4rem;
-    ;
+    font-size: 10rem;
+    padding-top: 3%;
 }
 
 h2 {
@@ -280,15 +282,13 @@ nav {
     flex-grow: 3;
 }
 
-
-/* .about-contentbox p {
+.hidden {
     visibility: hidden;
-} */
-
-.about-contentbox p:hover {
-    visibility: visible;
 }
 
+.about-contentbox div:hover .hidden {
+    visibility: visible;
+}
 
 .about-person.team1 {
     background: url(https://ca.slack-edge.com/ESZCHB482-W013NQ2U1F1-c896d4be006d-512);
@@ -299,6 +299,7 @@ nav {
 }
 
 .team1 h2,
+.team1 h3,
 .team1 p {
     margin: 2%;
 }
